# realtimeAI

./: .gitignore  README.md
realtime_client/: .env.example  pyproject.toml
realtime_client/app/: client.py  main.py  python_client.py  server.py
realtime_client/app/static/: client.html  client.js  style.css
realtime_client/docs/: realtime_connect_with_WebRTC.md  realtime_model_capabilities.md  realtime_overview.md
