[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
python-multipart = "^0.0.9"
websockets = "^12.0"
numpy = "^2.2.2"
aiortc = "^1.10.1"
aiohttp = "^3.11.12"
pyaudio = "^0.2.14"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
